--- a/react-forms/src/index.css
+++ b/react-forms/src/index.css
@@ -1,3 +1,15 @@
+:root {
+  --bgColor: #3c4346;
+  --textColor: #bfe4d0;
+  --containerBgColor: #2c2d2f;
+  --containerDarkerBgColor: #202123;
+  --containerDarkestBgColor: #1c1c1e;
+  --accent1: #22a067;
+  --accent2: #3c9c76;
+  --textGray: #777;
+  --shadowColor: rgba(0, 0, 0, 0.2);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +17,143 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--bgColor);
+  display: flex;
+  justify-content: center;
+  overflow: auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  background-color: var(--containerBgColor);
+  padding: 2em;
+  font-size: 1.2em;
+  color: var(--textColor);
+  border-top: 4px solid var(--accent1);
+  box-shadow: 0px 2px 10px var(--shadowColor);
+  border-radius: 2px;
+  box-sizing: border-box;
+  min-width: 400px;
+  width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 3em;
+  margin-bottom: 3em;
+}
+
+button {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: var(--textColor);
+  background-color: var(--accent1);
+  padding: 0.7em;
+  min-width: 10em;
+  border-radius: 0.3em;
+  border: 0px solid #000;
+  box-shadow: 0px 0px 2px var(--shadowColor);
+  font-weight: bold;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: var(--accent2);
+}
+
+input {
+  padding: 0.4em;
+  border-radius: 0.3em;
+  border: 1px solid var(--accent2);
+  background-color: var(--containerDarkerBgColor);
+  color: var(--textColor);
+  width: 100%;
+  box-sizing: border-box;
+}
+
+input:focus {
+  outline: 2px solid var(--accent1);
+}
+
+form {
+  width: 100%;
+}
+
+.form-component-container {
+  margin-top: 0;
+  margin-bottom: 0.5em;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+
+.form-component-error {
+  font-style: italic;
+  color: var(--textGray);
+  font-size: 0.7em;
+}
+
+.multi-error-container {
+  background-color: var(--containerDarkestBgColor);
+  width: 100%;
+  white-space: pre-wrap;
+  padding: 0.3em;
+  margin-top: 0.5em;
+  box-sizing: border-box;
+  border-radius: 0.5em;
+}
+
+h1 {
+  color: var(--accent1);
+  text-shadow: 0px 2px 10px var(--shadowColor);
+  width: 100%;
+  text-align: center;
+}
+
+.radioContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 0.9em;
+  background-color: var(--containerDarkestBgColor);
+}
+
+.radioContainer:nth-child(2) {
+  border-radius: 0.3em 0.3em 0 0;
+}
+
+.radioContainer:only-child {
+  border-radius: 0.3em 0.3em 0 0;
+}
+
+.radioContainer:last-child {
+  border-radius: 0 0 0.3em 0.3em;
+}
+
+
+.radioContainer input {
+  width: fit-content;
+  background: var(--containerDarkestBgColor);
+  outline: none;
+  border-radius: 100%;
+  accent-color: var(--accent1);
+  border: 0px solid;
+}
+
+.radioContainer input:focus {
+  box-shadow: 0px 0px 0px 1px var(--accent1);
+}
+
+select {
+  padding: 0.4em;
+  border-radius: 0.3em;
+  border: 1px solid var(--accent2);
+  background-color: var(--containerDarkerBgColor);
+  color: var(--textColor);
+  width: 100%;
+  box-sizing: border-box;
 }
