--- a/recoil-tutorial/src/index.css
+++ b/recoil-tutorial/src/index.css
@@ -5,9 +5,86 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #323232;
+  display: flex;
+  justify-content: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  box-shadow: 0px 0px 3px #232323;
+  border-radius: 3px;
+  text-align: center;
+  border: 0px;
+  padding: 0.5em;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom: 0.5em;
+  background-color: #9dc962;
+  transition: 700ms;
+}
+
+input:focus {
+  outline: 2px solid #9dc962;
+}
+
+button:hover {
+  background-color: #f36a69;
+}
+
+input {
+
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  box-shadow: 0px 0px 3px #232323;
+  border-radius: 3px;
+  text-align: center;
+  border: 0px;
+  padding: 0.5em;
+  width: 100%;
+  margin-bottom: 0.5em;
+  box-sizing: border-box;
+  background-color: #232323;
+  color: #d5d5d5
+}
+
+.display {
+
+  box-shadow: 0px 0px 3px #232323;
+  border-radius: 3px;
+  text-align: center;
+  border: 0px;
+  padding: 0.5em;
+  width: 100%;
+  margin-bottom: 0.5em;
+  box-sizing: border-box;
+  background-color: #232323;
+  color: #d5d5d5
+}
+
+div.mainContainer {
+  width: 700px;
+  box-sizing: border-box;
+}
+
+h3 {
+  text-shadow: 0px 0px 3px #232323;
+  color: #d5d5d5;
+}
+
+div.color-control {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 0.2em 1em;
+  background-color: #3c3c3c;
+  box-shadow: 0px 0px 3px #232323;
+  margin-bottom: 0.5em;
+  border-radius: 3px;
+  text-align: center;
+  color: #d5d5d5;
+  font-size: 1.3em;
 }
